--- a/app/src/main/res/layout/activity_release_freight.xml
+++ b/app/src/main/res/layout/activity_release_freight.xml
@@ -209,6 +209,40 @@
 
                     <View style="@style/LineStyleLight"/>
 
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="备注说明"
+                            android:textSize="14sp"
+                            android:textColor="@color/text_black_color"/>
+
+                        <EditText
+                            android:id="@+id/edtTxtRemark"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="18dp"
+                            android:paddingTop="12dp"
+                            android:paddingBottom="12dp"
+                            android:background="@null"
+                            android:maxLength="20"
+                            android:inputType="textMultiLine"
+                            android:minLines="1"
+                            android:hint="20字以内"
+                            android:textColor="@color/text_black_color"
+                            android:textColorHint="@color/light_gray_color"
+                            android:textSize="14sp"/>
+
+                    </LinearLayout>
+
+                    <View style="@style/LineStyleLight"/>
+
                 </LinearLayout>
 
 
