--- a/app/src/main/res/layout/item_grid_home_menu.xml
+++ b/app/src/main/res/layout/item_grid_home_menu.xml
@@ -3,15 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/select_white_background"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp">
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_centerHorizontal="true"
         android:src="@mipmap/home_supply_order"/>
 
@@ -25,7 +23,7 @@
         android:gravity="center_horizontal"
         android:text="订做"
         android:textSize="12sp"
-        android:textColor="@color/text_black_color"/>
+        android:textColor="@color/text_gray_color"/>
 
     <View
         android:id="@+id/unRead"
