--- a/app/src/main/res/layout/item_recycler_ask_buy_list.xml
+++ b/app/src/main/res/layout/item_recycler_ask_buy_list.xml
@@ -25,6 +25,31 @@
         android:textSize="16sp"
         android:textColor="@color/light_gray_color"/>
 
+    <ImageView
+        android:id="@+id/imgViMarkSelf"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        android:src="@mipmap/mark_self"
+        android:layout_marginLeft="8dp"
+        android:layout_toRightOf="@id/txtName"
+        android:layout_alignBottom="@id/txtName"
+        android:layout_marginBottom="2.5dp"/>
+
+    <TextView
+        android:id="@+id/txtMark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/shape_mark_enterprise_bg"
+        android:layout_marginTop="3dp"
+        android:paddingTop="1dp"
+        android:paddingBottom="1dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:textSize="11sp"
+        android:text="企业"
+        android:textColor="@color/while_color"/>
+
     <TextView
         android:id="@+id/txtTime"
         android:layout_width="wrap_content"
@@ -37,11 +62,21 @@
         android:textColor="@color/light_gray_color"/>
 
     <TextView
-        android:id="@+id/txtContent"
+        android:id="@+id/txtTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/imgViHead"
         android:layout_marginTop="8dp"
+        android:text="求购美格网"
+        android:textSize="15sp"
+        android:textColor="@color/theme_color"/>
+
+    <TextView
+        android:id="@+id/txtContent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtTitle"
+        android:layout_marginTop="3dp"
         android:maxLines="2"
         android:ellipsize="end"
         android:lineSpacingExtra="2dp"
