--- a/app/src/main/res/layout/layout_askbuy_adviser.xml
+++ b/app/src/main/res/layout/layout_askbuy_adviser.xml
@@ -17,13 +17,15 @@
 
     <TextView
         android:id="@+id/txtAdviserName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@id/imgViAvatar"
+        android:layout_toLeftOf="@id/txtCall"
         android:layout_marginLeft="12dp"
+        android:layout_marginRight="10dp"
         android:text="报价顾问涛涛"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:textColor="@color/text_gray_light_color"/>
 
     <TextView
