--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -166,16 +166,30 @@
                     android:layout_weight="1"/>
 
 
-                <TextView
-                    android:id="@+id/txtLoginWechat"
+                <LinearLayout
+                    android:id="@+id/llLoginWeChat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/select_white_background"
+                    android:padding="5dp"
                     android:layout_gravity="center_horizontal"
-                    android:text="微信登录"
-                    android:textColor="@drawable/text_theme_check_tv_color"
-                    android:textSize="13sp"
-                    android:padding="12dp" />
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:src="@mipmap/logo_wechat"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="6dp"
+                        android:text="微信帐户快速登录"
+                        android:textColor="@color/text_black_color2"
+                        android:textSize="13sp"/>
+                </LinearLayout>
 
             </LinearLayout>
 
