--- a/app/src/main/res/layout/item_recycler_ask_buy_list.xml
+++ b/app/src/main/res/layout/item_recycler_ask_buy_list.xml
@@ -67,9 +67,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/imgViHead"
         android:layout_marginTop="8dp"
+        android:textStyle="bold"
         android:text="求购美格网"
-        android:textSize="15sp"
-        android:textColor="@color/theme_color"/>
+        android:textSize="14sp"
+        android:textColor="@color/text_black_color"/>
 
     <TextView
         android:id="@+id/txtContent"
