--- a/app/src/main/res/layout/fragment_my2.xml
+++ b/app/src/main/res/layout/fragment_my2.xml
@@ -640,13 +640,60 @@
             <View style="@style/LineStyle" android:layout_marginBottom="10dp"/>
 
 
+            <LinearLayout
+                android:id="@+id/llAudit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:orientation="vertical">
+
+                <View style="@style/LineStyle"/>
+
+                <RelativeLayout
+                    android:id="@+id/rlAudit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
+                    android:background="@drawable/select_white_background"
+                    android:visibility="visible">
+
+                    <ImageView
+                        android:id="@+id/imgViAudit"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginLeft="15.5dp"
+                        android:layout_centerVertical="true"
+                        android:src="@mipmap/my_release_goods"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/imgViAudit"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="12dp"
+                        android:text="快速审核"
+                        android:textColor="@color/black_color"
+                        android:textSize="14sp" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:src="@mipmap/icon_my_arrows_right" />
+
+                </RelativeLayout>
+
+                <View style="@style/LineStyle" android:layout_marginBottom="10dp"/>
+            </LinearLayout>
 
 
             <LinearLayout
                 android:id="@+id/llReleaseStockGoods"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:orientation="vertical">
 
                 <View style="@style/LineStyle"/>
