--- a/app/src/main/res/layout/activity_askbuy_detail.xml
+++ b/app/src/main/res/layout/activity_askbuy_detail.xml
@@ -111,14 +111,48 @@
                     android:horizontalSpacing="3dp"
                     android:stretchMode="columnWidth"/>
 
+                <TextView
+                    android:id="@+id/txtReadNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/gridImg"
+                    android:layout_marginTop="12dp"
+                    android:text="浏览(60)"
+                    android:textSize="12sp"
+                    android:textColor="@color/text_gray_light_color"/>
+
+                <TextView
+                    android:id="@+id/txtOfferNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/txtReadNum"
+                    android:layout_alignBottom="@id/txtReadNum"
+                    android:layout_marginLeft="20dp"
+                    android:text="报价(10)"
+                    android:textSize="12sp"
+                    android:textColor="@color/text_gray_light_color"/>
+
+                <TextView
+                    android:id="@+id/txtState"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@id/txtReadNum"
+                    android:text="报价中"
+                    android:textSize="13sp"
+                    android:textColor="@color/orange_color"/>
+
             </RelativeLayout>
 
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="105dp"
+                android:layout_marginBottom="12dp"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ask_buy_security"/>
+
+            <include layout="@layout/layout_askbuy_adviser"/>
 
 
             <LinearLayout
@@ -129,12 +163,18 @@
                 android:background="@color/while_color"
                 android:orientation="vertical">
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="12dp"
+                    android:background="@color/view_background_gray_color"/>
+
                 <TextView
+                    android:id="@+id/txtRecord"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="12dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="8dp"
                     android:text="报价记录"
                     android:textColor="@color/text_black_color"
                     android:textSize="14sp"/>
@@ -170,6 +210,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:visibility="gone"
             android:layout_gravity="bottom"
             android:background="@drawable/selector_btn_gray"
             android:gravity="center"
@@ -186,7 +227,7 @@
             android:layout_weight="3"
             android:layout_gravity="bottom"
             android:background="@drawable/selector_btn_blue"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="0dp"
             android:gravity="center"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
