--- a/app/src/main/res/layout/activity_release_offer.xml
+++ b/app/src/main/res/layout/activity_release_offer.xml
@@ -33,10 +33,12 @@
 
                 <EditText
                     android:id="@+id/edtTxtPrice"
-                    android:layout_width="0dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@null"
+                    android:background="@drawable/shape_item_attent_trans"
+                    android:layout_marginLeft="5dp"
+                    android:padding="5dp"
+                    android:gravity="center"
                     android:hint="请输入产品单价"
                     android:inputType="numberDecimal"
                     android:textColorHint="@color/light_gray_color"
@@ -44,20 +46,12 @@
                     android:textSize="14sp"/>
 
                 <TextView
-                    android:id="@+id/txtUnit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/shape_item_attent_trans"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="6dp"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:drawableRight="@mipmap/icon_arrows_down"
-                    android:drawablePadding="5dp"
-                    android:text="元/套"
-                    android:textColor="@color/text_gray_light_color"
-                    android:textSize="13sp"/>
+                    android:layout_marginLeft="10dp"
+                    android:text="元"
+                    android:textSize="14sp"
+                    android:textColor="@color/text_black_color"/>
 
             </LinearLayout>
 
@@ -98,10 +92,38 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="12dp"
+                android:paddingTop="15dp"
+                android:paddingLeft="12dp"
                 android:text="注：交易成功，平台将收取0.5%的服务费"
                 android:textColor="@color/red_color"
                 android:textSize="12sp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/chkProtocol"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:paddingLeft="12dp"
+                    android:paddingRight="8dp"
+                    android:button="@null"
+                    android:drawableLeft="@drawable/selector_chk_freight"/>
+
+                <TextView
+                    android:id="@+id/txtProtocol"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:autoLink="all"
+                    android:textSize="12sp"
+                    android:textColor="@color/text_black_color"
+                    android:text="参与报价即视为同意丝网+《交易协议》内容"/>
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
